--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "create-tables": "cross-env CREATE_TABLES=true keystone create-tables"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.5",
     "@keystonejs/adapter-mongoose": "^11.1.0",
     "@keystonejs/app-admin-ui": "^7.4.1",
     "@keystonejs/app-graphql": "^6.2.2",
@@ -24,6 +25,8 @@
     "@keystonejs/auth-password": "^6.0.2",
     "@keystonejs/fields": "^22.0.1",
     "@keystonejs/keystone": "^19.2.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "react-query": "^3.12.3"
   }
 }
