--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@keystonejs/app-next": "^6.1.0",
     "@keystonejs/auth-password": "^6.0.2",
     "@keystonejs/fields": "^22.0.1",
+    "@keystonejs/fields-markdown": "^5.3.0",
     "@keystonejs/keystone": "^19.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
