--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@keystonejs/keystone": "^19.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
+    "milligram": "^1.4.1",
+    "react-hook-form": "^6.15.4",
+    "react-markdown": "^5.0.3",
     "react-query": "^3.12.3"
   }
 }
