--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@keystonejs/fields": "^22.0.1",
     "@keystonejs/fields-markdown": "^5.3.0",
     "@keystonejs/keystone": "^19.2.1",
+    "antd": "^4.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "milligram": "^1.4.1",
