--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^6.15.4",
     "react-markdown": "^5.0.3",
     "react-query": "^3.12.3",
+    "react-responsive": "^8.2.0",
     "react-scroll": "^1.8.2"
   }
 }
