--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,10 +35,10 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
         # ftp server
-        server: ${{ FTP_SERVER }}
+        server: ${{ secrets.FTP_SERVER }}
         # ftp username
-        username: ${{ FTP_USERNAME }}
+        username: ${{ secrets.FTP_USERNAME }}
         # ftp password
-        password: ${{ FTP_PASSWORD }}
+        password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
         
