--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,9 +25,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - run: npm i    
     - run: npm run build --if-present
-    - run: npm test
     
     - name: FTP Deploy
       # You may pin to the exact commit or the version.
